About us done without responsive

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -396,7 +396,7 @@
 
         /* ============= featuredIn Start =========== */
         #featuredIn .feturedImg img {
-            width: 115px;
+            /* width: 115px; */
         }
 
         /* ==============Our Program Start ========= */
