--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,8 @@ body {
     font-family: 'Poppins', sans-serif;
     font-size: 18px;
     background: #FFF;
+    font-style: italic;
+    
 
     .extraPadding {
         padding: 0 5.25% 0 5.25%;
@@ -18,27 +20,27 @@ body {
 
     h1 {
         font-size: 29px;
-        font-weight: 600;
+        font-weight: 500;
         color: #000000;
         line-height: 1.5;
     }
 
     h2 {
         font-size: 25px;
-        font-weight: 600;
+        font-weight: 500;
         color: #000000;
     }
 
     h3 {
         color: #000000;
-        font-weight: 600;
+        font-weight: 500;
         font-size: 18px;
     }
 
     h5 {
         font-size: 24px;
         color: #333333;
-        font-weight: 600;
+        font-weight: 500;
     }
 
     h6 {
@@ -68,7 +70,8 @@ body {
 
     .button {
         font-size: 18px;
-        font-weight: 600;
+        font-style: italic;
+        font-weight: 500;
         color: #FFFFFF;
         background: #16264B;
         border-radius: 30px;
@@ -116,7 +119,7 @@ body {
 
     .navbar-brand {
         color: #1C1C1C;
-        font-weight: 700;
+        font-weight: 500;
         font-size: 28px;
     }
 }
@@ -193,10 +196,6 @@ body {
 
     .feturedImg {
         margin: 0 auto;
-
-        img {
-            width: 190px;
-        }
     }
 }
 
@@ -449,3 +448,80 @@ body {
 }
 
 // ===============Footer End===========/
+
+// =============== About US page Start=======
+
+
+
+
+// =============== About US page End=======
+
+    .aboutUsBannerDescription{
+        line-height: 1.8;
+    }
+    .afterPersentise{
+        width: 75%;
+        margin: 0 auto;
+        p{
+            color: #333333;
+        }
+    }
+    .persentage90{
+        font-size: 55px;
+    }
+    .aboutGraduate{
+        font-size: 15px;
+        font-weight: 400;
+       
+    }
+    .aboutUsList{
+        li{
+            font-size: 15px;
+            color: #556575;
+        }
+        div img{
+            height: 15px;
+        }
+    }
+    .eployLeft{
+        max-height: 440px;
+    }
+    .aboutUsPeopleControl{
+        box-shadow: 0px 0px 30px #dbdbdb;
+        .peopleNameControl{
+            position: relative;
+        }
+        .peopleName::before {
+            content: "";
+            background: url('../images/smallQutation.png');
+            background-repeat: no-repeat;
+            opacity: 0.1;
+            top: 13%;
+            left: -10%;
+            bottom: -10%;
+            right: 0;
+            position: absolute;
+            z-index: 1;
+        }
+
+        p{
+            font-size: 14px;
+        }
+        h5{
+            font-size: 14px;
+            font-weight: 700;
+            margin: 0;
+        }
+        small{
+            font-size: 13px;
+            font-weight: 400;
+            margin: 0;
+        }
+        position: relative;
+        .peopleOfAboutUs{
+            position: absolute;
+            top: -3%;
+            left: -10%;
+            height: 65px;
+        }
+    }
